parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    DIV
    EQUAL
    FIN
    GREATER
    MAIN
    MULT
    OR
    PARA
    POWER
    RANDOM
    SMALLER
    STRING
    SUBSTR
    SUM
    WHILE

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> sentencias sentencia
Rule 2     sentencias -> sentencia
Rule 3     sentencia -> expresion
Rule 4     sentencia -> add
Rule 5     sentencia -> continue
Rule 6     sentencia -> pos
Rule 7     sentencia -> DEF ID IGUAL valor PYC
Rule 8     sentencia -> DEF ID IGUAL TRUE PYC
Rule 9     sentencia -> DEF ID IGUAL FALSE PYC
Rule 10    sentencia -> PUT ID IGUAL valor PYC
Rule 11    sentencia -> PUT ID IGUAL expresion PYC
Rule 12    add -> ADD CORCHETEIZQ ID CORCHETEDER PYC
Rule 13    add -> ADD CORCHETEIZQ ID ID CORCHETEDER PYC
Rule 14    add -> ADD CORCHETEIZQ ID INT CORCHETEDER PYC
Rule 15    valor -> INT
Rule 16    valor -> ID
Rule 17    continue -> CONTINUEUP INT PYC
Rule 18    continue -> CONTINUEUP ID PYC
Rule 19    continue -> CONTINUEUP expresion PYC
Rule 20    continue -> CONTINUEDOWN INT PYC
Rule 21    continue -> CONTINUEDOWN ID PYC
Rule 22    continue -> CONTINUEDOWN expresion PYC
Rule 23    continue -> CONTINUERIGHT INT PYC
Rule 24    continue -> CONTINUERIGHT ID PYC
Rule 25    continue -> CONTINUERIGHT expresion PYC
Rule 26    continue -> CONTINUELEFT INT PYC
Rule 27    continue -> CONTINUELEFT ID PYC
Rule 28    continue -> CONTINUELEFT expresion PYC
Rule 29    pos -> POS CORCHETEIZQ expresion COMA expresion CORCHETEDER PYC
Rule 30    pos -> POS CORCHETEIZQ valor COMA valor CORCHETEDER PYC
Rule 31    pos -> POS CORCHETEIZQ valor COMA expresion CORCHETEDER PYC
Rule 32    pos -> POS CORCHETEIZQ expresion COMA valor CORCHETEDER PYC
Rule 33    pos -> POSX expresion PYC
Rule 34    pos -> POSX valor PYC
Rule 35    pos -> POSY expresion PYC
Rule 36    pos -> POSY valor PYC
Rule 37    sentencia -> USECOLOR valor PYC
Rule 38    sentencia -> USECOLOR expresion PYC
Rule 39    sentencia -> DOWN PYC
Rule 40    sentencia -> UP PYC
Rule 41    sentencia -> BEGIN PYC
Rule 42    sentencia -> SPEED expresion PYC
Rule 43    sentencia -> SPEED valor PYC
Rule 44    sentencia -> RUN CORCHETEIZQ sentencias CORCHETEDER PYC
Rule 45    sentencia -> REPEAT valor CORCHETEIZQ sentencias CORCHETEDER PYC
Rule 46    sentencia -> REPEAT expresion CORCHETEIZQ sentencias CORCHETEDER PYC
Rule 47    sentencia -> IF condicion CORCHETEIZQ sentencias CORCHETEDER PYC
Rule 48    sentencia -> IFELSE condicion CORCHETEIZQ sentencias CORCHETEDER CORCHETEIZQ sentencias CORCHETEDER PYC
Rule 49    sentencia -> UNTIL CORCHETEIZQ sentencias CORCHETEDER CORCHETEIZQ condicion CORCHETEDER PYC
Rule 50    expresion -> expresion PLUS expresion
Rule 51    expresion -> expresion RESTA expresion
Rule 52    expresion -> expresion MULTIPLICACION expresion
Rule 53    expresion -> expresion DIVISION expresion
Rule 54    expresion -> expresion POTENCIA expresion
Rule 55    expresion -> RESTA expresion
Rule 56    expresion -> INT
Rule 57    expresion -> PARENTESISIZQ expresion PARENTESISDER
Rule 58    expresion -> condicion
Rule 59    condicion -> expresion MAYORQUE expresion
Rule 60    condicion -> expresion MENORQUE expresion
Rule 61    condicion -> expresion IGUALES expresion
Rule 62    condicion -> valor MAYORQUE expresion

Terminals, with rules where they appear

ADD                  : 12 13 14
AND                  : 
BEGIN                : 41
COMA                 : 29 30 31 32
CONTINUEDOWN         : 20 21 22
CONTINUELEFT         : 26 27 28
CONTINUERIGHT        : 23 24 25
CONTINUEUP           : 17 18 19
CORCHETEDER          : 12 13 14 29 30 31 32 44 45 46 47 48 48 49 49
CORCHETEIZQ          : 12 13 14 29 30 31 32 44 45 46 47 48 48 49 49
DEF                  : 7 8 9
DIV                  : 
DIVISION             : 53
DOWN                 : 39
EQUAL                : 
FALSE                : 9
FIN                  : 
GREATER              : 
ID                   : 7 8 9 10 11 12 13 13 14 16 18 21 24 27
IF                   : 47
IFELSE               : 48
IGUAL                : 7 8 9 10 11
IGUALES              : 61
INT                  : 14 15 17 20 23 26 56
MAIN                 : 
MAYORQUE             : 59 62
MENORQUE             : 60
MULT                 : 
MULTIPLICACION       : 52
OR                   : 
PARA                 : 
PARENTESISDER        : 57
PARENTESISIZQ        : 57
PLUS                 : 50
POS                  : 29 30 31 32
POSX                 : 33 34
POSY                 : 35 36
POTENCIA             : 54
POWER                : 
PUT                  : 10 11
PYC                  : 7 8 9 10 11 12 13 14 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
RANDOM               : 
REPEAT               : 45 46
RESTA                : 51 55
RUN                  : 44
SMALLER              : 
SPEED                : 42 43
STRING               : 
SUBSTR               : 
SUM                  : 
TRUE                 : 8
UNTIL                : 49
UP                   : 40
USECOLOR             : 37 38
WHILE                : 
error                : 

Nonterminals, with rules where they appear

add                  : 4
condicion            : 47 48 49 58
continue             : 5
expresion            : 3 11 19 22 25 28 29 29 31 32 33 35 38 42 46 50 50 51 51 52 52 53 53 54 54 55 57 59 59 60 60 61 61 62
pos                  : 6
sentencia            : 1 2
sentencias           : 1 44 45 46 47 48 48 49 0
valor                : 7 10 30 30 31 32 34 36 37 43 45 62

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . sentencias sentencia
    (2) sentencias -> . sentencia
    (3) sentencia -> . expresion
    (4) sentencia -> . add
    (5) sentencia -> . continue
    (6) sentencia -> . pos
    (7) sentencia -> . DEF ID IGUAL valor PYC
    (8) sentencia -> . DEF ID IGUAL TRUE PYC
    (9) sentencia -> . DEF ID IGUAL FALSE PYC
    (10) sentencia -> . PUT ID IGUAL valor PYC
    (11) sentencia -> . PUT ID IGUAL expresion PYC
    (37) sentencia -> . USECOLOR valor PYC
    (38) sentencia -> . USECOLOR expresion PYC
    (39) sentencia -> . DOWN PYC
    (40) sentencia -> . UP PYC
    (41) sentencia -> . BEGIN PYC
    (42) sentencia -> . SPEED expresion PYC
    (43) sentencia -> . SPEED valor PYC
    (44) sentencia -> . RUN CORCHETEIZQ sentencias CORCHETEDER PYC
    (45) sentencia -> . REPEAT valor CORCHETEIZQ sentencias CORCHETEDER PYC
    (46) sentencia -> . REPEAT expresion CORCHETEIZQ sentencias CORCHETEDER PYC
    (47) sentencia -> . IF condicion CORCHETEIZQ sentencias CORCHETEDER PYC
    (48) sentencia -> . IFELSE condicion CORCHETEIZQ sentencias CORCHETEDER CORCHETEIZQ sentencias CORCHETEDER PYC
    (49) sentencia -> . UNTIL CORCHETEIZQ sentencias CORCHETEDER CORCHETEIZQ condicion CORCHETEDER PYC
    (50) expresion -> . expresion PLUS expresion
    (51) expresion -> . expresion RESTA expresion
    (52) expresion -> . expresion MULTIPLICACION expresion
    (53) expresion -> . expresion DIVISION expresion
    (54) expresion -> . expresion POTENCIA expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . INT
    (57) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (58) expresion -> . condicion
    (12) add -> . ADD CORCHETEIZQ ID CORCHETEDER PYC
    (13) add -> . ADD CORCHETEIZQ ID ID CORCHETEDER PYC
    (14) add -> . ADD CORCHETEIZQ ID INT CORCHETEDER PYC
    (17) continue -> . CONTINUEUP INT PYC
    (18) continue -> . CONTINUEUP ID PYC
    (19) continue -> . CONTINUEUP expresion PYC
    (20) continue -> . CONTINUEDOWN INT PYC
    (21) continue -> . CONTINUEDOWN ID PYC
    (22) continue -> . CONTINUEDOWN expresion PYC
    (23) continue -> . CONTINUERIGHT INT PYC
    (24) continue -> . CONTINUERIGHT ID PYC
    (25) continue -> . CONTINUERIGHT expresion PYC
    (26) continue -> . CONTINUELEFT INT PYC
    (27) continue -> . CONTINUELEFT ID PYC
    (28) continue -> . CONTINUELEFT expresion PYC
    (29) pos -> . POS CORCHETEIZQ expresion COMA expresion CORCHETEDER PYC
    (30) pos -> . POS CORCHETEIZQ valor COMA valor CORCHETEDER PYC
    (31) pos -> . POS CORCHETEIZQ valor COMA expresion CORCHETEDER PYC
    (32) pos -> . POS CORCHETEIZQ expresion COMA valor CORCHETEDER PYC
    (33) pos -> . POSX expresion PYC
    (34) pos -> . POSX valor PYC
    (35) pos -> . POSY expresion PYC
    (36) pos -> . POSY valor PYC
    (59) condicion -> . expresion MAYORQUE expresion
    (60) condicion -> . expresion MENORQUE expresion
    (61) condicion -> . expresion IGUALES expresion
    (62) condicion -> . valor MAYORQUE expresion
    (15) valor -> . INT
    (16) valor -> . ID

    DEF             shift and go to state 7
    PUT             shift and go to state 10
    USECOLOR        shift and go to state 11
    DOWN            shift and go to state 12
    UP              shift and go to state 13
    BEGIN           shift and go to state 14
    SPEED           shift and go to state 15
    RUN             shift and go to state 16
    REPEAT          shift and go to state 17
    IF              shift and go to state 18
    IFELSE          shift and go to state 20
    UNTIL           shift and go to state 21
    RESTA           shift and go to state 22
    INT             shift and go to state 23
    PARENTESISIZQ   shift and go to state 24
    ADD             shift and go to state 25
    CONTINUEUP      shift and go to state 26
    CONTINUEDOWN    shift and go to state 27
    CONTINUERIGHT   shift and go to state 28
    CONTINUELEFT    shift and go to state 29
    POS             shift and go to state 30
    POSX            shift and go to state 31
    POSY            shift and go to state 32
    ID              shift and go to state 8

    sentencias                     shift and go to state 1
    sentencia                      shift and go to state 2
    expresion                      shift and go to state 3
    add                            shift and go to state 4
    continue                       shift and go to state 5
    pos                            shift and go to state 6
    valor                          shift and go to state 9
    condicion                      shift and go to state 19

state 1

    (0) S' -> sentencias .
    (1) sentencias -> sentencias . sentencia
    (3) sentencia -> . expresion
    (4) sentencia -> . add
    (5) sentencia -> . continue
    (6) sentencia -> . pos
    (7) sentencia -> . DEF ID IGUAL valor PYC
    (8) sentencia -> . DEF ID IGUAL TRUE PYC
    (9) sentencia -> . DEF ID IGUAL FALSE PYC
    (10) sentencia -> . PUT ID IGUAL valor PYC
    (11) sentencia -> . PUT ID IGUAL expresion PYC
    (37) sentencia -> . USECOLOR valor PYC
    (38) sentencia -> . USECOLOR expresion PYC
    (39) sentencia -> . DOWN PYC
    (40) sentencia -> . UP PYC
    (41) sentencia -> . BEGIN PYC
    (42) sentencia -> . SPEED expresion PYC
    (43) sentencia -> . SPEED valor PYC
    (44) sentencia -> . RUN CORCHETEIZQ sentencias CORCHETEDER PYC
    (45) sentencia -> . REPEAT valor CORCHETEIZQ sentencias CORCHETEDER PYC
    (46) sentencia -> . REPEAT expresion CORCHETEIZQ sentencias CORCHETEDER PYC
    (47) sentencia -> . IF condicion CORCHETEIZQ sentencias CORCHETEDER PYC
    (48) sentencia -> . IFELSE condicion CORCHETEIZQ sentencias CORCHETEDER CORCHETEIZQ sentencias CORCHETEDER PYC
    (49) sentencia -> . UNTIL CORCHETEIZQ sentencias CORCHETEDER CORCHETEIZQ condicion CORCHETEDER PYC
    (50) expresion -> . expresion PLUS expresion
    (51) expresion -> . expresion RESTA expresion
    (52) expresion -> . expresion MULTIPLICACION expresion
    (53) expresion -> . expresion DIVISION expresion
    (54) expresion -> . expresion POTENCIA expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . INT
    (57) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (58) expresion -> . condicion
    (12) add -> . ADD CORCHETEIZQ ID CORCHETEDER PYC
    (13) add -> . ADD CORCHETEIZQ ID ID CORCHETEDER PYC
    (14) add -> . ADD CORCHETEIZQ ID INT CORCHETEDER PYC
    (17) continue -> . CONTINUEUP INT PYC
    (18) continue -> . CONTINUEUP ID PYC
    (19) continue -> . CONTINUEUP expresion PYC
    (20) continue -> . CONTINUEDOWN INT PYC
    (21) continue -> . CONTINUEDOWN ID PYC
    (22) continue -> . CONTINUEDOWN expresion PYC
    (23) continue -> . CONTINUERIGHT INT PYC
    (24) continue -> . CONTINUERIGHT ID PYC
    (25) continue -> . CONTINUERIGHT expresion PYC
    (26) continue -> . CONTINUELEFT INT PYC
    (27) continue -> . CONTINUELEFT ID PYC
    (28) continue -> . CONTINUELEFT expresion PYC
    (29) pos -> . POS CORCHETEIZQ expresion COMA expresion CORCHETEDER PYC
    (30) pos -> . POS CORCHETEIZQ valor COMA valor CORCHETEDER PYC
    (31) pos -> . POS CORCHETEIZQ valor COMA expresion CORCHETEDER PYC
    (32) pos -> . POS CORCHETEIZQ expresion COMA valor CORCHETEDER PYC
    (33) pos -> . POSX expresion PYC
    (34) pos -> . POSX valor PYC
    (35) pos -> . POSY expresion PYC
    (36) pos -> . POSY valor PYC
    (59) condicion -> . expresion MAYORQUE expresion
    (60) condicion -> . expresion MENORQUE expresion
    (61) condicion -> . expresion IGUALES expresion
    (62) condicion -> . valor MAYORQUE expresion
    (15) valor -> . INT
    (16) valor -> . ID

    DEF             shift and go to state 7
    PUT             shift and go to state 10
    USECOLOR        shift and go to state 11
    DOWN            shift and go to state 12
    UP              shift and go to state 13
    BEGIN           shift and go to state 14
    SPEED           shift and go to state 15
    RUN             shift and go to state 16
    REPEAT          shift and go to state 17
    IF              shift and go to state 18
    IFELSE          shift and go to state 20
    UNTIL           shift and go to state 21
    RESTA           shift and go to state 22
    INT             shift and go to state 23
    PARENTESISIZQ   shift and go to state 24
    ADD             shift and go to state 25
    CONTINUEUP      shift and go to state 26
    CONTINUEDOWN    shift and go to state 27
    CONTINUERIGHT   shift and go to state 28
    CONTINUELEFT    shift and go to state 29
    POS             shift and go to state 30
    POSX            shift and go to state 31
    POSY            shift and go to state 32
    ID              shift and go to state 8

    sentencia                      shift and go to state 33
    expresion                      shift and go to state 3
    add                            shift and go to state 4
    continue                       shift and go to state 5
    pos                            shift and go to state 6
    valor                          shift and go to state 9
    condicion                      shift and go to state 19

state 2

    (2) sentencias -> sentencia .

    DEF             reduce using rule 2 (sentencias -> sentencia .)
    PUT             reduce using rule 2 (sentencias -> sentencia .)
    USECOLOR        reduce using rule 2 (sentencias -> sentencia .)
    DOWN            reduce using rule 2 (sentencias -> sentencia .)
    UP              reduce using rule 2 (sentencias -> sentencia .)
    BEGIN           reduce using rule 2 (sentencias -> sentencia .)
    SPEED           reduce using rule 2 (sentencias -> sentencia .)
    RUN             reduce using rule 2 (sentencias -> sentencia .)
    REPEAT          reduce using rule 2 (sentencias -> sentencia .)
    IF              reduce using rule 2 (sentencias -> sentencia .)
    IFELSE          reduce using rule 2 (sentencias -> sentencia .)
    UNTIL           reduce using rule 2 (sentencias -> sentencia .)
    RESTA           reduce using rule 2 (sentencias -> sentencia .)
    INT             reduce using rule 2 (sentencias -> sentencia .)
    PARENTESISIZQ   reduce using rule 2 (sentencias -> sentencia .)
    ADD             reduce using rule 2 (sentencias -> sentencia .)
    CONTINUEUP      reduce using rule 2 (sentencias -> sentencia .)
    CONTINUEDOWN    reduce using rule 2 (sentencias -> sentencia .)
    CONTINUERIGHT   reduce using rule 2 (sentencias -> sentencia .)
    CONTINUELEFT    reduce using rule 2 (sentencias -> sentencia .)
    POS             reduce using rule 2 (sentencias -> sentencia .)
    POSX            reduce using rule 2 (sentencias -> sentencia .)
    POSY            reduce using rule 2 (sentencias -> sentencia .)
    ID              reduce using rule 2 (sentencias -> sentencia .)
    $end            reduce using rule 2 (sentencias -> sentencia .)
    CORCHETEDER     reduce using rule 2 (sentencias -> sentencia .)


state 3

    (3) sentencia -> expresion .
    (50) expresion -> expresion . PLUS expresion
    (51) expresion -> expresion . RESTA expresion
    (52) expresion -> expresion . MULTIPLICACION expresion
    (53) expresion -> expresion . DIVISION expresion
    (54) expresion -> expresion . POTENCIA expresion
    (59) condicion -> expresion . MAYORQUE expresion
    (60) condicion -> expresion . MENORQUE expresion
    (61) condicion -> expresion . IGUALES expresion

  ! shift/reduce conflict for RESTA resolved as shift
    DEF             reduce using rule 3 (sentencia -> expresion .)
    PUT             reduce using rule 3 (sentencia -> expresion .)
    USECOLOR        reduce using rule 3 (sentencia -> expresion .)
    DOWN            reduce using rule 3 (sentencia -> expresion .)
    UP              reduce using rule 3 (sentencia -> expresion .)
    BEGIN           reduce using rule 3 (sentencia -> expresion .)
    SPEED           reduce using rule 3 (sentencia -> expresion .)
    RUN             reduce using rule 3 (sentencia -> expresion .)
    REPEAT          reduce using rule 3 (sentencia -> expresion .)
    IF              reduce using rule 3 (sentencia -> expresion .)
    IFELSE          reduce using rule 3 (sentencia -> expresion .)
    UNTIL           reduce using rule 3 (sentencia -> expresion .)
    INT             reduce using rule 3 (sentencia -> expresion .)
    PARENTESISIZQ   reduce using rule 3 (sentencia -> expresion .)
    ADD             reduce using rule 3 (sentencia -> expresion .)
    CONTINUEUP      reduce using rule 3 (sentencia -> expresion .)
    CONTINUEDOWN    reduce using rule 3 (sentencia -> expresion .)
    CONTINUERIGHT   reduce using rule 3 (sentencia -> expresion .)
    CONTINUELEFT    reduce using rule 3 (sentencia -> expresion .)
    POS             reduce using rule 3 (sentencia -> expresion .)
    POSX            reduce using rule 3 (sentencia -> expresion .)
    POSY            reduce using rule 3 (sentencia -> expresion .)
    ID              reduce using rule 3 (sentencia -> expresion .)
    $end            reduce using rule 3 (sentencia -> expresion .)
    CORCHETEDER     reduce using rule 3 (sentencia -> expresion .)
    PLUS            shift and go to state 34
    RESTA           shift and go to state 35
    MULTIPLICACION  shift and go to state 36
    DIVISION        shift and go to state 37
    POTENCIA        shift and go to state 38
    MAYORQUE        shift and go to state 39
    MENORQUE        shift and go to state 40
    IGUALES         shift and go to state 41

  ! RESTA           [ reduce using rule 3 (sentencia -> expresion .) ]


state 4

    (4) sentencia -> add .

    DEF             reduce using rule 4 (sentencia -> add .)
    PUT             reduce using rule 4 (sentencia -> add .)
    USECOLOR        reduce using rule 4 (sentencia -> add .)
    DOWN            reduce using rule 4 (sentencia -> add .)
    UP              reduce using rule 4 (sentencia -> add .)
    BEGIN           reduce using rule 4 (sentencia -> add .)
    SPEED           reduce using rule 4 (sentencia -> add .)
    RUN             reduce using rule 4 (sentencia -> add .)
    REPEAT          reduce using rule 4 (sentencia -> add .)
    IF              reduce using rule 4 (sentencia -> add .)
    IFELSE          reduce using rule 4 (sentencia -> add .)
    UNTIL           reduce using rule 4 (sentencia -> add .)
    RESTA           reduce using rule 4 (sentencia -> add .)
    INT             reduce using rule 4 (sentencia -> add .)
    PARENTESISIZQ   reduce using rule 4 (sentencia -> add .)
    ADD             reduce using rule 4 (sentencia -> add .)
    CONTINUEUP      reduce using rule 4 (sentencia -> add .)
    CONTINUEDOWN    reduce using rule 4 (sentencia -> add .)
    CONTINUERIGHT   reduce using rule 4 (sentencia -> add .)
    CONTINUELEFT    reduce using rule 4 (sentencia -> add .)
    POS             reduce using rule 4 (sentencia -> add .)
    POSX            reduce using rule 4 (sentencia -> add .)
    POSY            reduce using rule 4 (sentencia -> add .)
    ID              reduce using rule 4 (sentencia -> add .)
    $end            reduce using rule 4 (sentencia -> add .)
    CORCHETEDER     reduce using rule 4 (sentencia -> add .)


state 5

    (5) sentencia -> continue .

    DEF             reduce using rule 5 (sentencia -> continue .)
    PUT             reduce using rule 5 (sentencia -> continue .)
    USECOLOR        reduce using rule 5 (sentencia -> continue .)
    DOWN            reduce using rule 5 (sentencia -> continue .)
    UP              reduce using rule 5 (sentencia -> continue .)
    BEGIN           reduce using rule 5 (sentencia -> continue .)
    SPEED           reduce using rule 5 (sentencia -> continue .)
    RUN             reduce using rule 5 (sentencia -> continue .)
    REPEAT          reduce using rule 5 (sentencia -> continue .)
    IF              reduce using rule 5 (sentencia -> continue .)
    IFELSE          reduce using rule 5 (sentencia -> continue .)
    UNTIL           reduce using rule 5 (sentencia -> continue .)
    RESTA           reduce using rule 5 (sentencia -> continue .)
    INT             reduce using rule 5 (sentencia -> continue .)
    PARENTESISIZQ   reduce using rule 5 (sentencia -> continue .)
    ADD             reduce using rule 5 (sentencia -> continue .)
    CONTINUEUP      reduce using rule 5 (sentencia -> continue .)
    CONTINUEDOWN    reduce using rule 5 (sentencia -> continue .)
    CONTINUERIGHT   reduce using rule 5 (sentencia -> continue .)
    CONTINUELEFT    reduce using rule 5 (sentencia -> continue .)
    POS             reduce using rule 5 (sentencia -> continue .)
    POSX            reduce using rule 5 (sentencia -> continue .)
    POSY            reduce using rule 5 (sentencia -> continue .)
    ID              reduce using rule 5 (sentencia -> continue .)
    $end            reduce using rule 5 (sentencia -> continue .)
    CORCHETEDER     reduce using rule 5 (sentencia -> continue .)


state 6

    (6) sentencia -> pos .

    DEF             reduce using rule 6 (sentencia -> pos .)
    PUT             reduce using rule 6 (sentencia -> pos .)
    USECOLOR        reduce using rule 6 (sentencia -> pos .)
    DOWN            reduce using rule 6 (sentencia -> pos .)
    UP              reduce using rule 6 (sentencia -> pos .)
    BEGIN           reduce using rule 6 (sentencia -> pos .)
    SPEED           reduce using rule 6 (sentencia -> pos .)
    RUN             reduce using rule 6 (sentencia -> pos .)
    REPEAT          reduce using rule 6 (sentencia -> pos .)
    IF              reduce using rule 6 (sentencia -> pos .)
    IFELSE          reduce using rule 6 (sentencia -> pos .)
    UNTIL           reduce using rule 6 (sentencia -> pos .)
    RESTA           reduce using rule 6 (sentencia -> pos .)
    INT             reduce using rule 6 (sentencia -> pos .)
    PARENTESISIZQ   reduce using rule 6 (sentencia -> pos .)
    ADD             reduce using rule 6 (sentencia -> pos .)
    CONTINUEUP      reduce using rule 6 (sentencia -> pos .)
    CONTINUEDOWN    reduce using rule 6 (sentencia -> pos .)
    CONTINUERIGHT   reduce using rule 6 (sentencia -> pos .)
    CONTINUELEFT    reduce using rule 6 (sentencia -> pos .)
    POS             reduce using rule 6 (sentencia -> pos .)
    POSX            reduce using rule 6 (sentencia -> pos .)
    POSY            reduce using rule 6 (sentencia -> pos .)
    ID              reduce using rule 6 (sentencia -> pos .)
    $end            reduce using rule 6 (sentencia -> pos .)
    CORCHETEDER     reduce using rule 6 (sentencia -> pos .)


state 7

    (7) sentencia -> DEF . ID IGUAL valor PYC
    (8) sentencia -> DEF . ID IGUAL TRUE PYC
    (9) sentencia -> DEF . ID IGUAL FALSE PYC

    ID              shift and go to state 42


state 8

    (16) valor -> ID .

    MAYORQUE        reduce using rule 16 (valor -> ID .)
    PYC             reduce using rule 16 (valor -> ID .)
    CORCHETEIZQ     reduce using rule 16 (valor -> ID .)
    COMA            reduce using rule 16 (valor -> ID .)
    CORCHETEDER     reduce using rule 16 (valor -> ID .)


state 9

    (62) condicion -> valor . MAYORQUE expresion

    MAYORQUE        shift and go to state 43


state 10

    (10) sentencia -> PUT . ID IGUAL valor PYC
    (11) sentencia -> PUT . ID IGUAL expresion PYC

    ID              shift and go to state 44


state 11

    (37) sentencia -> USECOLOR . valor PYC
    (38) sentencia -> USECOLOR . expresion PYC
    (15) valor -> . INT
    (16) valor -> . ID
    (50) expresion -> . expresion PLUS expresion
    (51) expresion -> . expresion RESTA expresion
    (52) expresion -> . expresion MULTIPLICACION expresion
    (53) expresion -> . expresion DIVISION expresion
    (54) expresion -> . expresion POTENCIA expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . INT
    (57) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (58) expresion -> . condicion
    (59) condicion -> . expresion MAYORQUE expresion
    (60) condicion -> . expresion MENORQUE expresion
    (61) condicion -> . expresion IGUALES expresion
    (62) condicion -> . valor MAYORQUE expresion

    INT             shift and go to state 47
    ID              shift and go to state 8
    RESTA           shift and go to state 22
    PARENTESISIZQ   shift and go to state 24

    valor                          shift and go to state 45
    expresion                      shift and go to state 46
    condicion                      shift and go to state 19

state 12

    (39) sentencia -> DOWN . PYC

    PYC             shift and go to state 48


state 13

    (40) sentencia -> UP . PYC

    PYC             shift and go to state 49


state 14

    (41) sentencia -> BEGIN . PYC

    PYC             shift and go to state 50


state 15

    (42) sentencia -> SPEED . expresion PYC
    (43) sentencia -> SPEED . valor PYC
    (50) expresion -> . expresion PLUS expresion
    (51) expresion -> . expresion RESTA expresion
    (52) expresion -> . expresion MULTIPLICACION expresion
    (53) expresion -> . expresion DIVISION expresion
    (54) expresion -> . expresion POTENCIA expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . INT
    (57) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (58) expresion -> . condicion
    (15) valor -> . INT
    (16) valor -> . ID
    (59) condicion -> . expresion MAYORQUE expresion
    (60) condicion -> . expresion MENORQUE expresion
    (61) condicion -> . expresion IGUALES expresion
    (62) condicion -> . valor MAYORQUE expresion

    RESTA           shift and go to state 22
    INT             shift and go to state 23
    PARENTESISIZQ   shift and go to state 24
    ID              shift and go to state 8

    expresion                      shift and go to state 51
    valor                          shift and go to state 52
    condicion                      shift and go to state 19

state 16

    (44) sentencia -> RUN . CORCHETEIZQ sentencias CORCHETEDER PYC

    CORCHETEIZQ     shift and go to state 53


state 17

    (45) sentencia -> REPEAT . valor CORCHETEIZQ sentencias CORCHETEDER PYC
    (46) sentencia -> REPEAT . expresion CORCHETEIZQ sentencias CORCHETEDER PYC
    (15) valor -> . INT
    (16) valor -> . ID
    (50) expresion -> . expresion PLUS expresion
    (51) expresion -> . expresion RESTA expresion
    (52) expresion -> . expresion MULTIPLICACION expresion
    (53) expresion -> . expresion DIVISION expresion
    (54) expresion -> . expresion POTENCIA expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . INT
    (57) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (58) expresion -> . condicion
    (59) condicion -> . expresion MAYORQUE expresion
    (60) condicion -> . expresion MENORQUE expresion
    (61) condicion -> . expresion IGUALES expresion
    (62) condicion -> . valor MAYORQUE expresion

    INT             shift and go to state 47
    ID              shift and go to state 8
    RESTA           shift and go to state 22
    PARENTESISIZQ   shift and go to state 24

    valor                          shift and go to state 54
    expresion                      shift and go to state 55
    condicion                      shift and go to state 19

state 18

    (47) sentencia -> IF . condicion CORCHETEIZQ sentencias CORCHETEDER PYC
    (59) condicion -> . expresion MAYORQUE expresion
    (60) condicion -> . expresion MENORQUE expresion
    (61) condicion -> . expresion IGUALES expresion
    (62) condicion -> . valor MAYORQUE expresion
    (50) expresion -> . expresion PLUS expresion
    (51) expresion -> . expresion RESTA expresion
    (52) expresion -> . expresion MULTIPLICACION expresion
    (53) expresion -> . expresion DIVISION expresion
    (54) expresion -> . expresion POTENCIA expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . INT
    (57) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (58) expresion -> . condicion
    (15) valor -> . INT
    (16) valor -> . ID

    RESTA           shift and go to state 22
    INT             shift and go to state 23
    PARENTESISIZQ   shift and go to state 24
    ID              shift and go to state 8

    condicion                      shift and go to state 56
    expresion                      shift and go to state 57
    valor                          shift and go to state 9

state 19

    (58) expresion -> condicion .

    PLUS            reduce using rule 58 (expresion -> condicion .)
    RESTA           reduce using rule 58 (expresion -> condicion .)
    MULTIPLICACION  reduce using rule 58 (expresion -> condicion .)
    DIVISION        reduce using rule 58 (expresion -> condicion .)
    POTENCIA        reduce using rule 58 (expresion -> condicion .)
    MAYORQUE        reduce using rule 58 (expresion -> condicion .)
    MENORQUE        reduce using rule 58 (expresion -> condicion .)
    IGUALES         reduce using rule 58 (expresion -> condicion .)
    DEF             reduce using rule 58 (expresion -> condicion .)
    PUT             reduce using rule 58 (expresion -> condicion .)
    USECOLOR        reduce using rule 58 (expresion -> condicion .)
    DOWN            reduce using rule 58 (expresion -> condicion .)
    UP              reduce using rule 58 (expresion -> condicion .)
    BEGIN           reduce using rule 58 (expresion -> condicion .)
    SPEED           reduce using rule 58 (expresion -> condicion .)
    RUN             reduce using rule 58 (expresion -> condicion .)
    REPEAT          reduce using rule 58 (expresion -> condicion .)
    IF              reduce using rule 58 (expresion -> condicion .)
    IFELSE          reduce using rule 58 (expresion -> condicion .)
    UNTIL           reduce using rule 58 (expresion -> condicion .)
    INT             reduce using rule 58 (expresion -> condicion .)
    PARENTESISIZQ   reduce using rule 58 (expresion -> condicion .)
    ADD             reduce using rule 58 (expresion -> condicion .)
    CONTINUEUP      reduce using rule 58 (expresion -> condicion .)
    CONTINUEDOWN    reduce using rule 58 (expresion -> condicion .)
    CONTINUERIGHT   reduce using rule 58 (expresion -> condicion .)
    CONTINUELEFT    reduce using rule 58 (expresion -> condicion .)
    POS             reduce using rule 58 (expresion -> condicion .)
    POSX            reduce using rule 58 (expresion -> condicion .)
    POSY            reduce using rule 58 (expresion -> condicion .)
    ID              reduce using rule 58 (expresion -> condicion .)
    $end            reduce using rule 58 (expresion -> condicion .)
    PYC             reduce using rule 58 (expresion -> condicion .)
    CORCHETEIZQ     reduce using rule 58 (expresion -> condicion .)
    PARENTESISDER   reduce using rule 58 (expresion -> condicion .)
    CORCHETEDER     reduce using rule 58 (expresion -> condicion .)
    COMA            reduce using rule 58 (expresion -> condicion .)


state 20

    (48) sentencia -> IFELSE . condicion CORCHETEIZQ sentencias CORCHETEDER CORCHETEIZQ sentencias CORCHETEDER PYC
    (59) condicion -> . expresion MAYORQUE expresion
    (60) condicion -> . expresion MENORQUE expresion
    (61) condicion -> . expresion IGUALES expresion
    (62) condicion -> . valor MAYORQUE expresion
    (50) expresion -> . expresion PLUS expresion
    (51) expresion -> . expresion RESTA expresion
    (52) expresion -> . expresion MULTIPLICACION expresion
    (53) expresion -> . expresion DIVISION expresion
    (54) expresion -> . expresion POTENCIA expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . INT
